# src/PatchKit.Api/Models/Main/App.cs
@@ -11,6 +11,18 @@ namespace PatchKit.Api.Models.Main
         public int Id;
         
         /// <summary>
+        /// Application secret
+        /// </summary>
+        [JsonProperty("secret")]
+        public string Secret;
+        
+        /// <summary>
+        /// Application platform
+        /// </summary>
+        [JsonProperty("platform")]
+        public string Platform;
+        
+        /// <summary>
         /// Application name
         /// </summary>
         [JsonProperty("name")]
