# src/PatchKit.Api/swagger-main.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "version": "180220",
+    "version": "180313",
     "title": "PatchKit API",
     "contact": {
       "name": "API Support",
@@ -16,6 +16,98 @@
   "host": "api.patchkit.net",
   "basePath": "/1",
   "paths": {
+    "/apps": {
+      "get": {
+        "summary": "Lists user applications",
+        "tags": [
+          "App"
+        ],
+        "parameters": [
+          {
+            "name": "api_key",
+            "in": "query",
+            "required": true,
+            "type": "string",
+            "description": "Application owner API key."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/App"
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "summary": "Creates application",
+        "tags": [
+          "App"
+        ],
+        "consumes": [
+          "multipart/form-data"
+        ],
+        "parameters": [
+          {
+            "name": "api_key",
+            "in": "query",
+            "required": true,
+            "type": "string",
+            "description": "Application owner API key."
+          },
+          {
+            "name": "name",
+            "description": "Application initial name",
+            "type": "string",
+            "required": true,
+            "in": "formData"
+          },
+          {
+            "name": "platform",
+            "description": "Application target platform",
+            "type": "string",
+            "required": true,
+            "in": "formData",
+            "enum": [
+              "windows_x86",
+              "windows_x86_64",
+              "mac_x86",
+              "mac_x86_64",
+              "linux_x86",
+              "linux_x86_64"
+            ]
+          },
+          {
+            "name": "cdn",
+            "description": "Target CDN id. If you're using any other CDN than default one, ask your account manager for CDN id.",
+            "type": "integer",
+            "required": false,
+            "in": "formData"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Created",
+            "schema": {
+              "$ref": "#/definitions/App"
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
+          },
+          "403": {
+            "description": "Not authorized"
+          }
+        }
+      }
+    },
     "/apps/{app_secret}": {
       "get": {
         "summary": "Get application info",
@@ -76,7 +168,23 @@
             "schema": {
               "type": "array",
               "items": {
-                "$ref": "#/definitions/Changelog"
+                "type": "object",
+                "properties": {
+                  "version_id": {
+                    "type": "integer",
+                    "format": "int32",
+                    "description": "Version id.",
+                    "minimum": 1
+                  },
+                  "version_label": {
+                    "type": "string",
+                    "description": "Human readable label."
+                  },
+                  "changes": {
+                    "type": "string",
+                    "description": "Changes description."
+                  }
+                }
               }
             }
           },
@@ -1662,6 +1770,23 @@
           "minimum": 1,
           "description": "Initial app id."
         },
+        "secret": {
+            "type": "string",
+            "description": "Application secret"
+        },
+        "platform": {
+            "type": "string",
+            "enum": [
+              "windows_x86",
+              "windows_x86_64",
+              "mac_x86",
+              "mac_x86_64",
+              "linux_x86",
+              "linux_x86_64",
+              "other"
+            ],
+            "description": "Application platform"
+        },
         "name": {
           "type": "string",
           "description": "Application name"
@@ -1681,7 +1806,7 @@
         "publish_method": {
           "type": "string",
           "enum": [
-            "all",
+            "any",
             "http_only"
           ]
         },
@@ -1725,38 +1850,6 @@
         "patcher_secret": {
           "type": "string",
           "description": "The secret of patcher to use."
-        }
-      }
-    },
-    "Changelog": {
-      "type": "object",
-      "properties": {
-        "version_id": {
-          "type": "integer",
-          "format": "int32",
-          "description": "Version id.",
-          "minimum": 1
-        },
-        "version_label": {
-          "type": "string",
-          "description": "Human readable label."
-        },
-        "changes": {
-          "type": "string",
-          "description": "Changes description."
-        }
-      }
-    },
-    "PatcherBannerImageDimensions": {
-      "type": "object",
-      "properties": {
-        "x": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "y": {
-          "type": "integer",
-          "format": "int32"
         }
       }
     },
